--- a/views/attractions/index.ejs
+++ b/views/attractions/index.ejs
@@ -15,7 +15,7 @@
 
 <body class="d-flex flex-column vh-100">
     <%- include('../partials/navbar') %>
-    <main class="container mt-5">
+    <main class=" container mt-5">
         <%= success  %>
         <link rel="stylesheet"
             href="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-directions/v4.1.0/mapbox-gl-directions.css"
@@ -23,16 +23,16 @@
         <div id="map" style="width: 100%; height: 500px"></div>
         <h1>All Attractions</h1>
         <div class="mb-3">
-            <a class="btn btn-primary" style="background-color: yellowgreen;" href="/attractions/new"> Add New
+            <a class="btn btn-primary" style="background-color: rgb(6, 192, 0);" href="/attractions/new"> Add New
                 Attraction</a>
         </div>
 
         <% for (let attraction of attractions ) {%>
-        <div class="card mb-3" style="image-resolution: 200;  background-color: rgb(239, 252, 250);">
+        <div class="card mb-3" style="image-resolution: 200;  background-color: rgb(245, 248, 248);">
             <div class="row">
                 <div class="col-md-3">
                     <% if(attraction.images.length !== 0) { %>
-                    <img class="img-fluid" style="height: 100%;" width="100%" alt=""
+                    <img class="img-fluid" style="height: 100%; image-resolution: 72dpi;" width="100%" alt=""
                         src="<%= attraction.images[0].url %> ">
                     <% } %>
                 </div>
@@ -43,7 +43,7 @@
                         <p class="card-text">
                             <small class="text-muted"> <%= attraction.location  %> </small>
                         </p>
-                        <a class="btn btn-primary" style="background-color: rgb(250, 150, 0);"
+                        <a class="btn btn-primary" style="background-color: rgb(96, 107, 255);"
                             href="/attractions/<%= attraction._id %> "> View <%= attraction.title  %>
                         </a>
                     </div>
