--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -7,18 +7,18 @@
         </button>
         <div class="collapse navbar-collapse me-auto" id="navbarNavAltMarkup">
             <div class="navbar-nav mr-auto">
-                <a class="nav-link" href="/">Home</a>
-                <a class="nav-link" href="/attractions">Attractions</a>
-                <a class="nav-link" href="/attractions/new">Add New Attraction</a>
+                <a class="nav-link" style="color: blanchedalmond;" href="/">Home</a>
+                <a class="nav-link" style="color: blanchedalmond;" href="/attractions">Attractions</a>
+                <a class="nav-link" style="color: blanchedalmond;" href="/attractions/new">Add New Attraction</a>
 
             </div>
             <div class="navbar-nav ml-auto">
 
                 <% if(!currentUser) {%>
-                <a class="nav-link" href="/login">Login</a>
-                <a class="nav-link" href="/register">SignUp</a>
+                <a class="nav-link" style="color: blanchedalmond;" href="/login">Login</a>
+                <a class="nav-link" style="color: blanchedalmond;" href="/register">SignUp</a>
                 <% } else {%>
-                <a class="nav-link" href="/logout">Logout</a>
+                <a class="nav-link" style="color: blanchedalmond;" href="/logout">Logout</a>
                 <% } %>
 
 
